--- a/tutorials/1.13.2/forge/99.99-coremod.md
+++ b/tutorials/1.13.2/forge/99.99-coremod.md
@@ -1,18 +1,25 @@
 ---
 layout: page
 title: 99.99 - Coremod
-subtitle: Expert modders only
+subtitle: Expert modders only!
 ---
 
 # This is not meant to be a tutorial on writing ASM. If you need a tutorial on that, you shouldn't be reading this.
 ### This is mostly about how to update coremods from 1.12.2 to 1.13.2
 
-### This is just a draft of the tutorial, more details will be added soon:tm:
+### This is just a draft of the tutorial, more details will be added soon™️
 
-1) coremods.json https://github.com/Cadiboo/RenderChunk-rebuildChunk-Hooks/tree/master/src/main/resources/META-INF/coremods.json  
-2) transformer.js https://github.com/Cadiboo/RenderChunk-rebuildChunk-Hooks/tree/master/src/main/resources/coremods/  
-3) Target class and return class node
-```JavaScript
+1) `META-INF/coremods.json` [Example](https://github.com/Cadiboo/RenderChunk-rebuildChunk-Hooks/tree/master/src/main/resources/META-INF/coremods.json)
+```json
+{
+	"Transformer 1 Name": "path/to/transformer-1.js",
+	"Transformer 2 Name": "path/to/transformer-2.js"
+}
+
+```  
+2) `transformer.js` [Examples](https://github.com/Cadiboo/RenderChunk-rebuildChunk-Hooks/tree/master/src/main/resources/coremods/)  
+3) Basic `transformer.js`: Target class (at time of writing _only_ classes - not methods or fields - can be targeted) and return class node
+```javascript
 function initializeCoreMod() {
 	return {
 		'coreModName': {
@@ -29,7 +36,7 @@ function initializeCoreMod() {
 }
 ```  
 4) Looping over the methods
-```JavaScript
+```javascript
 var methods = classNode.methods;
 
 for (var i in methods) {
@@ -55,14 +62,14 @@ for (var i in methods) {
 }
 ```  
 5) Using Java classes
-```JavaScript
+```javascript
 var Opcodes = Java.type('org.objectweb.asm.Opcodes');
 var ASMAPI = Java.type('net.minecraftforge.coremod.api.ASMAPI');
 ```
 See allowed classes at `net.minecraftforge.coremod.CoreModEngine#ALLOWED_CLASSES`  
-6) Use `ASMAPI.getMethodNode().instructions` to get a blank `InsnList` because it's not an allowed class for some reason (at the time of writing this).  
+6) Use `ASMAPI.getMethodNode().instructions` to get a blank `InsnList` because it's not an allowed class for some reason (at the time of writing this, check [here](https://github.com/MinecraftForge/CoreMods/pull/14) for whether this is still the case).  
 7) Loop instructions
-```JavaScript
+```javascript
 var arrayLength = instructions.size();
 for (var i = 0; i < arrayLength; ++i) {
 	var instruction = instructions.get(i);
