--- a/tutorials/1.13.2/forge/99.99-coremod.md
+++ b/tutorials/1.13.2/forge/99.99-coremod.md
@@ -9,14 +9,19 @@ subtitle: Expert modders only!
 
 ### This is just a draft of the tutorial, more details will be added soon™️
 
-1) `META-INF/coremods.json` [Example](https://github.com/Cadiboo/RenderChunk-rebuildChunk-Hooks/tree/master/src/main/resources/META-INF/coremods.json)
+1) `META-INF/coremods.json` [Example](https://github.com/Cadiboo/NoCubes/tree/master/src/main/resources/META-INF/coremods.json)
 ```json
 {
 	"Transformer 1 Name": "path/to/transformer-1.js",
 	"Transformer 2 Name": "path/to/transformer-2.js"
 }
 ```  
-2) `transformer.js` [Examples](https://github.com/Cadiboo/RenderChunk-rebuildChunk-Hooks/tree/master/src/main/resources/coremods/)  
+2) `transformer.js` Examples:  
+- [block-fluid-renderer-transformer.js](https://github.com/Cadiboo/NoCubes/blob/master/src/main/resources/block-fluid-renderer-transformer.js)  
+- [render-chunk-transformer.js](https://github.com/Cadiboo/NoCubes/blob/master/src/main/resources/render-chunk-transformer.js)  
+- [i-world-reader-base-transformer.js](https://github.com/Cadiboo/NoCubes/blob/master/src/main/resources/i-world-reader-base-transformer.js)  
+- [world-renderer-transformer.js](https://github.com/Cadiboo/NoCubes/blob/master/src/main/resources/world-renderer-transformer.js)  
+
 3) Basic `transformer.js`: Target class (at time of writing _only_ classes - not methods or fields - can be targeted) and return class node
 ```javascript
 function initializeCoreMod() {
