--- a/tutorials/1.13.2/forge/1.4-first-item.md
+++ b/tutorials/1.13.2/forge/1.4-first-item.md
@@ -4,3 +4,5 @@ title: 1.4 - First Item
 ---
 
 
+
+![Why isn't my Event Subscriber Working](/tutorials/1.13.2/forge/eventsubscriber.png "Why isn't my Event Subscriber Working")
