--- a/tutorials/1.13.2/forge/99.99-coremod.md
+++ b/tutorials/1.13.2/forge/99.99-coremod.md
@@ -43,21 +43,20 @@ function initializeCoreMod() {
 ```javascript
 var methods = classNode.methods;
 
+var targetMethodName = mapMethod("func_178581_b");
+var targetMethodDesc = "(FFFLnet/minecraft/client/renderer/chunk/ChunkRenderTask;)V";
+
 for (var i in methods) {
 	var method = methods[i];
-	var methodName = method.name;
-
-	var deobfNameEquals = "rebuildChunk".equals(methodName);
-	var mcpNameEquals = "func_178581_b".equals(methodName);
-
-	if (!deobfNameEquals && !mcpNameEquals) {
-		print("Did not match method " + methodName);
+	
+	if (!method.name.equals(targetMethodName)) {
+		print("Did not match method name " + targetMethodName + " - " + method.name);
+		continue;
+	} else if (!method.desc.equals(targetMethodDesc)) {
+		print("Did not match method desc " + targetMethodDesc + " - " + method.desc);
 		continue;
 	}
-
-	print("Matched method " + methodName);
-
-	print(deobfNameEquals ? "Matched a deobfuscated name - we are in a DEOBFUSCATED/MCP-NAMED DEVELOPER Environment" : "Matched an SRG name - We are in an SRG-NAMED PRODUCTION Environment")
+	print("Matched method " + method.name + " " + method.desc);
 
 	// Do stuff with method.instructions
 
@@ -71,7 +70,7 @@ var Opcodes = Java.type('org.objectweb.asm.Opcodes');
 var ASMAPI = Java.type('net.minecraftforge.coremod.api.ASMAPI');
 ```
 See allowed classes at `net.minecraftforge.coremod.CoreModEngine#ALLOWED_CLASSES`  
-6) Use `ASMAPI.getMethodNode().instructions` to get a blank `InsnList` because it's not an allowed class for some reason (at the time of writing this, check [here](https://github.com/MinecraftForge/CoreMods/pull/14) for whether this is still the case).  
+6) ***ONLY FOR FORGE <199!*** Use `ASMAPI.getMethodNode().instructions` to get a blank `InsnList` because it's not an allowed class for some reason (at the time of writing this, check [here](https://github.com/MinecraftForge/CoreMods/pull/14) for whether this is still the case).  
 7) Loop instructions
 ```javascript
 var arrayLength = instructions.size();
@@ -82,4 +81,4 @@ for (var i = 0; i < arrayLength; ++i) {
 ```  
 8) Debugging  
 If the coremod has syntax errors or something check the very top of your log (before anything like `Scanning Mod File:` appears). This is at the very top and is usually to high up for IntelliJ's console to catch it so use the log in `/run/logs/`.  
-If the coremod failed to transform properly search for `XFORM` in the log. This will be wherever the class gets initialised so probably towards the end.
+If the coremod failed to transform properly search for `XFORM` and/or `<eval>` in the log. This will be wherever the class gets initialised so probably towards the end.
