--- a/tutorials/1.13.2/forge/99.99-coremod.md
+++ b/tutorials/1.13.2/forge/99.99-coremod.md
@@ -39,11 +39,16 @@ function initializeCoreMod() {
 	}
 }
 ```  
-4) Looping over the methods
+4) Using Java classes
+```javascript
+var Opcodes = Java.type('org.objectweb.asm.Opcodes');
+var ASMAPI = Java.type('net.minecraftforge.coremod.api.ASMAPI');
+```  
+5) Looping over the methods
 ```javascript
 var methods = classNode.methods;
 
-var targetMethodName = mapMethod("func_178581_b");
+var targetMethodName = ASMAPI.mapMethod("func_178581_b");
 var targetMethodDesc = "(FFFLnet/minecraft/client/renderer/chunk/ChunkRenderTask;)V";
 
 for (var i in methods) {
@@ -63,11 +68,6 @@ for (var i in methods) {
 	// Break because this particular coremod only targets one method
 	break;
 }
-```  
-5) Using Java classes
-```javascript
-var Opcodes = Java.type('org.objectweb.asm.Opcodes');
-var ASMAPI = Java.type('net.minecraftforge.coremod.api.ASMAPI');
 ```
 See allowed classes at `net.minecraftforge.coremod.CoreModEngine#ALLOWED_CLASSES`  
 6) ***ONLY FOR FORGE <199!*** Use `ASMAPI.getMethodNode().instructions` to get a blank `InsnList` because it's not an allowed class for some reason (at the time of writing this, check [here](https://github.com/MinecraftForge/CoreMods/pull/14) for whether this is still the case).  
@@ -81,4 +81,4 @@ for (var i = 0; i < arrayLength; ++i) {
 ```  
 8) Debugging  
 If the coremod has syntax errors or something check the very top of your log (before anything like `Scanning Mod File:` appears). This is at the very top and is usually to high up for IntelliJ's console to catch it so use the log in `/run/logs/`.  
-If the coremod failed to transform properly search for `XFORM` and/or `<eval>` in the log. This will be wherever the class gets initialised so probably towards the end.
+If the coremod failed to transform properly search for `<eval>` and/or `XFORM` in the log. This will be wherever the class gets initialised so probably towards the end.
